update sidebar logo to use imported asset

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -24,7 +24,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('/images/steak_main_dish_1768588159526.png');
+    background-image: url('../assets/images/steak_main_dish_1768588159526.png');
     background-size: cover;
     background-position: center;
     opacity: 0.1;
